--- a/front/package.json
+++ b/front/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "start": "react-scripts start & python3 ../back",
-    "pyInstall": "cd .. && pip3 install -r /back/requirements.txt",
+    "pyInstall": "cd .. && pip3 install -r back/requirements.txt",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
