--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -1,4 +1,4 @@
-flask = "*"
-flask-socketio = "*"
-python-dotenv = "*"
-eventlet = "*"
+flask == "*"
+flask-socketio == "*"
+python-dotenv == "*"
+eventlet == "*"
